--- a/references.bib
+++ b/references.bib
@@ -12,6 +12,15 @@
   publisher	= {Now Publishers, Inc.}
 }
 
+@misc{pavlo2024,
+  author = {Pavlo, Andy},
+  title = {CMU Intro to Database Systems},
+  year = {2024},
+  institution = {Carnegie Melon University},
+  howpublished = {University lecture series},
+  url = {https://youtu.be/otE2WvX3XdQ?si=L8OtgteVyH-bDb-y}
+}
+
 @book{petrov2019,
   title={Database Internals: A deep dive into how distributed data systems work},
   author={Petrov, Alex},
@@ -36,7 +45,7 @@
 	month = oct,
 	publisher = {Pacific++},
 	note = {[Online; accessed 24. Mar. 2025]},
-	url = {https://www.youtube.com/watch?v=iwJpxWHuZQY&t=4183s}
+	url = {https://www.youtube.com/watch?v=iwJpxWHuZQY}
 }
 
 @phdthesis{adam2017,
