--- a/problems.Rmd
+++ b/problems.Rmd
@@ -657,9 +657,9 @@ Here, $A$, $B$, and $C$ are three objects in category $\mathcal{C}$ and $F(A)$, 
 
 The second property of functors states that all of the above paths must lead to the same object $F(C)$ (if $F$ is a functor).
 
-#### Aggregation: A functor from the preorder of data subsets to the preorder of summary statistics {#aggregation-functor}
+#### Aggregation: A functor from data subsets to summary statistics {#aggregation-functor}
 
-As we have established before, when visualizing data, we may start with a category/preorder of data subsets ordered by sibling subset union, as in Figure \@ref(fig:barplot-preorder2) (reproduced below for reminder). We would like to translate these data subsets into summary statistics, in a way that preserves the inherent structure in the data. As we will see, the appropriate way to do this is via a functor.
+As we have established before, when visualizing data, we may start with the category/preorder of data subsets ordered by sibling subset union, as in Figure \@ref(fig:barplot-preorder2) (reproduced below for reminder). We would like to translate these data subsets into summary statistics, in a way that preserves the inherent structure in the data. As we will see, the appropriate way to do this is via a functor.
 
 ```{r barplot-preorder22}
 #| echo: false
@@ -1236,7 +1236,13 @@ Additionally, in some data visualization systems, certain elements of the visual
 
 To create a data visualizations, frames need to be populated with graphical elements. These include geometric objects which represent the data directly, such as points, lines, or rectangles, as well as auxiliary graphical elements such as axis breaks and labels, grid-lines, titles, and additional annotations.
 
-Geometric objects directly representing the data are of primary concern, since these are the most likely cause of rendering bottle-necks: typically, they are the most numerous class of elements as well as the most likely to require re-rendering upon interaction. For instance, in scatterplots and lineplots, the number of geometric objects is exactly equivalent to the number of rows. Likewise, in barplots and fluctuation diagrams, larger data set size often implies a greater number of categories and as a consequence more objects to be rendered. Similarly, most interactive features affect the geometric objects in some way, necessitating re-rendering. For instance, zooming, panning, and reordering affect the objects' position and/or size, while selection and parametric interaction affect the objects internal attributes, as well as the number of objects to render itself.
+Geometric objects directly representing the data (which I will call geoms, from here on out) are of primary concern, since these are the most likely cause of rendering bottle-necks: typically, they are the most numerous class of graphical elements as well as the most likely to require re-rendering upon interaction. For instance, in scatterplots and lineplots, the number of geoms equals the number of rows. Likewise, in barplots and fluctuation diagrams, larger data set size often implies a greater number of categories, and as a consequence more objects to be rendered. Furthermore, most interactive features affect the geoms in some way, necessitating re-rendering. For instance, zooming, panning, and reordering affect the objects' position and/or size, while selection and parametric interaction affect the objects internal attributes, as well as the number of objects to render itself.
 
-In contrast, auxiliary graphical elements are typically few in number, and require re-rendering less frequently. For instance, in a typical plot with continuous axes, there are generally only 4-6 labels for each axis (as an example, in R, the `pretty` function uses `n = 5` as the default number of *desired* intervals used to find axis breaks) and a single title. With two axes, that amounts to 10-14 text strings that need to be rendered, which is generally much less than the number of geometric objects. Additionally, as was mentioned in Section \@(stacking-part-whole), with monoidal plots like stacked barplots and histograms, axis labels do not have be to be re-rendered during linked selection. They *do* need to be re-rendered during zooming and panning, for obvious reasons, however, this is typically fairly cheap. Axis titles need to be re-rendered only during certain kinds of representation switching, such as when switching from a barplot to spineplot.
+In contrast, auxiliary graphical elements are typically few in number, and require less frequent re-renders. For instance, in a typical plot with continuous axes, there are generally only 4-6 labels for each axis (as an example, in R, the `pretty` function uses `n = 5` as the default number of *desired* intervals used to find axis breaks) and a single title. With two axes, that amounts to just 10-14 text strings (axis labels plus titles) that need to be rendered, which is generally much smaller number than the number of geoms. Additionally, as was mentioned in Section \@(stacking-part-whole), with monoidal plots like stacked barplots and histograms, axis labels do not have be to be re-rendered during linked selection. They *do* need to be re-rendered during zooming and panning, however, this operation will typically be fairly cheap. Axis titles need to be re-rendered only during representation switching, such as when switching from a barplot to spineplot.
+
+#### Rendering: A functor from summary statistics to graphics {#rendering-functor}
+
+Importantly, just as we can think of aggregation as a functor from the category of data subsets to the category of summary statistics (see Section \@ref(aggregation-functor)), so can we interpret rendering as a functor from the category of summary statistics to the category of graphics. Specifically, if the statistics underlying the plot form a hierarchy, so should the geometric objects representing them, and the mapping from one to the other should preserve the inherent structure. 
+
+Practically, this means that the geoms we use to represent the data should also behave like monoids: they should have a notion of an empty element and a binary associative operations that combines two elements together. For most simple geometric shapes, this is easily satisfied. For instance, bars, or more generally rectangles, can be combined by stacking or layering. Note that this does not necessarily require summing the bar heights. For instance, we can combine two bars by "cutting off" the extra height of the taller bar and pasting the resulting segment on top of the shorter bar (and the operation will be unital and associative, provided that the bars are sorted in increasing order by height).
 
